k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clickhouse
  labels:
    app: clickhouse
spec:
  selector:
    matchLabels:
      app: clickhouse
  replicas: 1
  template:
    metadata:
      labels:
        app: clickhouse
    spec:
      containers:
      - name: clickhouse
        image: clickhouse/clickhouse-server
        ports:
        - containerPort: 9000
          name: tcp-native
        - containerPort: 8123
          name: http
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: clickhouse
spec:
  selector:
    app: clickhouse
  type: ClusterIP
  ports:
  - name: native
    protocol: TCP
    port: 9000
    targetPort: 9000
  - name: http
    protocol: TCP
    port: 8123
    targetPort: 8123
